# internal/schema/entity/sys_district.entity.go
@@ -1,0 +1,70 @@
+package entity
+
+import (
+	"entgo.io/ent"
+	"entgo.io/ent/schema/field"
+	"github.com/heromicro/omgind/internal/schema/mixin"
+)
+
+type SysDistrict struct {
+	ent.Schema
+}
+
+func (SysDistrict) Mixin() []ent.Mixin {
+	return []ent.Mixin{
+		mixin.IDMixin{},
+		mixin.SortMixin{},
+		mixin.TimeMixin{},
+		mixin.ActiveMixin{},
+	}
+}
+
+func (SysDistrict) Fields() []ent.Field {
+
+	return []ent.Field{
+		field.String("name").Nillable().Optional().StorageKey("name").Comment("名称"),
+		field.String("sname").Nillable().Optional().StorageKey("sname").Comment("短名称"),
+
+		field.String("abbr").Nillable().Optional().StorageKey("abbr").Comment("简称Abbreviation"),
+
+		field.String("stcode").MaxLen(16).Nillable().Optional().StorageKey("stcode").Comment("统计局区域编码"),
+		field.String("initials").MaxLen(32).Nillable().Optional().StorageKey("initials").Comment("简拼"),
+		field.String("pinyin").MaxLen(128).Nillable().Optional().StorageKey("pinyin").Comment("简拼"),
+
+		field.String("parent_id").Nillable().Optional().StorageKey("pid").Comment("父级id"),
+
+		field.Float("longitude").Nillable().Optional().StorageKey("longitude").Comment("经度"),
+		field.Float("latitude").Nillable().Optional().StorageKey("longitude").Comment("经度"),
+		field.String("area_code").MaxLen(8).Nillable().Optional().StorageKey("area_code").Comment("电话区号码"),
+		field.String("zip_code").MaxLen(8).Nillable().Optional().StorageKey("area_code").Comment("邮政编码"),
+		field.String("merge_name").MaxLen(256).Nillable().Optional().StorageKey("mname").Comment("带前缀全名称"),
+		field.String("merge_sname").MaxLen(256).Nillable().Optional().StorageKey("msname").Comment("带前缀简名称"),
+		field.String("extra").MaxLen(64).Nillable().Optional().StorageKey("extra").Comment("附加信息"),
+		field.String("suffix").MaxLen(16).Nillable().Optional().StorageKey("suffix").Comment("后缀, 如 省, 自治区, 旗, 盟"),
+
+		field.Bool("is_hot").Default(false).Nillable().Optional().Comment("热门城市"),
+		field.Bool("is_real").Default(true).Nillable().Optional().StorageKey("is_r").Comment("是否虚拟区域"),
+		field.Bool("is_direct").Default(true).Nillable().Optional().StorageKey("is_d").Comment("是否是直辖"),
+
+		field.Int32("tree_id").Nillable().Optional().StorageKey("tree_id").StructTag(`json:"tree_id"`).Comment("tree_id"),
+		field.Int32("tree_level").Nillable().Optional().StorageKey("tree_level").StructTag(`json:"level"`).Comment("层级"),
+		field.Int64("tree_left").Nillable().Optional().StorageKey("tree_left").StructTag(`json:"tree_left"`).Comment("mptt左值"),
+		field.Int64("tree_right").Nillable().Optional().StorageKey("tree_right").StructTag(`json:"tree_right"`).Comment("mptt右值"),
+		field.Bool("is_leaf").Default(true).Nillable().Optional().StorageKey("is_leaf").StructTag(`json:"is_leaf"`).Comment("是否是子叶"),
+		field.Text("tree_path").Nillable().Optional().StorageKey("t_path").StructTag(`json:"tree_path"`),
+
+		field.String("creator").StorageKey("creator").Comment("创建者"),
+	}
+}
+
+func (SysDistrict) Edges() []ent.Edge {
+	return []ent.Edge{}
+}
+
+func (SysDistrict) Indexes() []ent.Index {
+	return []ent.Index{}
+}
+
+func (SysDistrict) Hooks() []ent.Hook {
+	return []ent.Hook{}
+}
